--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
 <body>
     <main class="main">
         <header class="header">
-            <img src="./assets/img/photo.jpg" alt="Foto Leandro" class="photo">
+            <img src="./assets/img/photo.jpg" alt="Foto de Perfil" class="photo profile.photo">
     
-            <h1 class="title">Olá, <br> Eu sou Leandro Jales</h1>
+            <h1 class="title">Olá, <br> Eu sou <span class="profile.name">Carregando...</span></h1>
     
             <div class="information">
-                <p class="job">Coord de Informações Gerenciais</p>
-                <p class="location">Rio de Janeiro - BR</p>
+                <p class="job"><span class="profile.job">Carregando...</span></p>
+                <p class="location"><span class="profile.location">Carregando...</span></p>
                 <p class="phone">
-                    <a href="tel:(21) 9 9999-8888">(21) 9 9999-8888</a>
+                    <a href="tel:(21) 9 9999-8888" class="profile.phone">Carregando...</a>
                 </p>
                 <p class="email">
-                    <a href="mailto:ex@mail.com">ex@mail.com</a>
+                    <a href="mailto:ex@mail.com" class="profile.email">carregando@mail.com</a>
                 </p>
             </div>
         </header>
