--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/assets/CSS/header.css">
-    <link rel="stylesheet" href="/assets/CSS/global.css">
-    <link rel="stylesheet" href="/assets/CSS/acordeon.css">
-    <link rel="stylesheet" href="/assets/CSS/languages.css">
-    <link rel="stylesheet" href="/assets/CSS/portfolio.css">
-    <link rel="stylesheet" href="/assets/CSS/experience.css">
-    <link rel="stylesheet" href="/assets/CSS/skills.css">
+    <link rel="stylesheet" href="./assets/CSS/header.css">
+    <link rel="stylesheet" href="./assets/CSS/global.css">
+    <link rel="stylesheet" href="./assets/CSS/acordeon.css">
+    <link rel="stylesheet" href="./assets/CSS/languages.css">
+    <link rel="stylesheet" href="./assets/CSS/portfolio.css">
+    <link rel="stylesheet" href="./assets/CSS/experience.css">
+    <link rel="stylesheet" href="./assets/CSS/skills.css">
 </head>
 
 <body>
@@ -52,19 +52,19 @@
                         <h3>Ferramentas</h3>
                         <ul>
                             <li>
-                                <img src="/assets/img/tools/html.svg" alt="html" title="html">
+                                <img src="./assets/img/tools/html.svg" alt="html" title="html">
                             </li>
                             <li>
-                                <img src="/assets/img/tools/css.svg" alt="css" title="css">
+                                <img src="./assets/img/tools/css.svg" alt="css" title="css">
                             </li>
                             <li>
-                                <img src="/assets/img/tools/javascript.svg" alt="javascript" title="javascript">
+                                <img src="./assets/img/tools/javascript.svg" alt="javascript" title="javascript">
                             </li>
                             <li>
-                                <img src="/assets/img/tools/react.svg" alt="react" title="react">
+                                <img src="./assets/img/tools/react.svg" alt="react" title="react">
                             </li>
                             <li>
-                                <img src="/assets/img/tools/python.svg" alt="python" title="python">
+                                <img src="./assets/img/tools/python.svg" alt="python" title="python">
                             </li>
                         </ul>
                     </section>
@@ -122,9 +122,9 @@
         </section>
     </main>
     
-    <script src="/assets/js/acordeon.js"></script>
-    <script src="/assets/js/api.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="./assets/js/acordeon.js"></script>
+    <script src="./assets/js/api.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
