Atualizações de pastas e criação de dinamismo nas informações

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
             </div>
         </header>
-        <section class="acordeon open">
+        <section class="acordeon">
             <button class="trigger" type="button">
                 Skills
             </button>
@@ -50,7 +50,7 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Ferramentas</h3>
-                        <ul>
+                        <ul id="profile.skills.hardSkills">
                             <li>
                                 <img src="/assets/img/tools/html.svg" alt="html" title="html">
                             </li>
@@ -69,12 +69,12 @@
                         </ul>
                     </section>
                     <section class="personal">
-                        <h3>Pessoal</h3>
-                        <ul>
-                            <li>Liderança</li>
-                            <li>Trabalho em Equipe</li>
-                            <li>Organização</li>
-                            <li>Flexibilidade</li>
+                        <h3>Pessoal:</h3>
+                        <ul id="profile.skills.softSkills">
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            <li>Carregando...</li>
+                            
                         </ul>
                     </section>
                 </div>
