Alteração de endereços de imagens

--- a/index.html
+++ b/index.html
@@ -49,23 +49,13 @@
             <div class="content">
                 <div class="skills">
                     <section class="tools">
-                        <h3>Ferramentas</h3>
+                        <h3>Ferramentas:</h3>
                         <ul id="profile.skills.hardSkills">
                             <li>
-                                <img src="./assets/img/tools/html.svg" alt="html" title="html">
+                                <img src="" alt="html" title="html">
+                                Carregando...
                             </li>
-                            <li>
-                                <img src="./assets/img/tools/css.svg" alt="css" title="css">
-                            </li>
-                            <li>
-                                <img src="./assets/img/tools/javascript.svg" alt="javascript" title="javascript">
-                            </li>
-                            <li>
-                                <img src="./assets/img/tools/react.svg" alt="react" title="react">
-                            </li>
-                            <li>
-                                <img src="./assets/img/tools/python.svg" alt="python" title="python">
-                            </li>
+                            
                         </ul>
                     </section>
                     <section class="personal">
