Inclusão de Idiomas e Portfolio

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                 Idiomas
             </button>
             <div class="content">
-                <ul class="languages">
-                    <li>Português</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Carregando...</li>
                 </ul>
             </div>
         </section>
@@ -86,10 +86,10 @@
                 Portfolio
             </button>
             <div class="content">
-                <ul class="portfolio">
+                <ul class="portfolio" id="profile.portfolio">
                     <li>
-                        <span class="title github"></span>
-                        <a href="" target="_blank"></a>
+                        <h3 class="title github">Carregando...</h3>
+                        <a href="" target="_blank">Carregando...</a>
                     </li>
                 </ul>
             </div>
