Finalização do projeto

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h1 class="title">Olá, <br> Eu sou <span id="profile.name">Carregando...</span></h1>
     
             <div class="information">
-                <p class="job"id="profile.job">Carregando...</p>
+                <p class="job" id="profile.job">Carregando...</p>
                 <p class="location" id="profile.location">Carregando...</p>
                 <p class="phone">
                     <a href="tel:(21) 9 9999-8888" id="profile.phone">Carregando...</a>
@@ -96,16 +96,14 @@
         </section>
         <section class="acordeon">
             <button class="trigger" type="button">
-                Experiência
+                Experience
             </button>
             <div class="content">
-                <ul class="experience">
+                <ul class="experience" id="profile.professionalExperience">
                     <li>
-                        <span class="title">Coordenador de Informações Gerenciais / Grande Rio Alimentos</span> <br>
-                        <span class="period">Mai 2016 - Current</span>
-                        <p> - Responsável pela elaboração de Relatórios e Dashboards, em Excel com automatizações utilizando VBA; <br>
-                            - Responsável pela criação e análise de base de dados do CRM da empresa;
-                        </p>
+                        <span class="title">Carregando...</span> <br>
+                        <span class="period">Carregando...</span>
+                        <p id="description">Carregando...</p>
                     </li>
                 </ul>
             </div>
