--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Protifólio Leandro C Jales</title>
+    <title>Portifólio Leandro C Jales</title>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -83,7 +83,7 @@
         </section>
         <section class="acordeon">
             <button class="trigger" type="button">
-                Portfolio
+                Portifólio
             </button>
             <div class="content">
                 <ul class="portfolio" id="profile.portfolio">
@@ -96,7 +96,7 @@
         </section>
         <section class="acordeon">
             <button class="trigger" type="button">
-                Experience
+                Experiência Profissional
             </button>
             <div class="content">
                 <ul class="experience" id="profile.professionalExperience">
