--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="assets/CSS/portfolio.css">
     <link rel="stylesheet" href="assets/CSS/experience.css">
     <link rel="stylesheet" href="assets/CSS/skills.css">
+    <link rel="stylesheet" href="assets/CSS/footer.css">
 </head>
 
 <body>
@@ -108,6 +109,11 @@
                 </ul>
             </div>
         </section>
+        <footer>
+            <a href="https://www.dio.me/" target="_blank">
+                <img src="assets/img/icons/dio.svg" alt="DIO">
+            </a>
+        </footer>
     </main>
     
     <script src="assets/js/acordeon.js"></script>
